# greentic-secrets

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  federated-master.json  federated-pr.json  federated.json
.cargo/: config.toml
.codex/: repo_overview.md
ci/: README.md  local_check.sh
components/secrets-provider-inmemory/: Cargo.toml
components/secrets-provider-inmemory/src/: lib.rs
components/secrets-provider-vault-kv/: Cargo.toml
components/secrets-provider-vault-kv/src/: lib.rs
conformance/: Cargo.toml
conformance/src/: lib.rs  main.rs
conformance/src/util/: executor_bridge.rs  mod.rs
coverage/: lcov.info
crates/greentic-config/: Cargo.toml  README.md
crates/greentic-config-types/: Cargo.toml  README.md
crates/greentic-config-types/src/: lib.rs
crates/greentic-config/src/: explain.rs  lib.rs  merge.rs  paths.rs  validate.rs
crates/greentic-config/src/loaders/: mod.rs
crates/greentic-secrets/: Cargo.toml
crates/greentic-secrets-runner/: Cargo.toml
crates/greentic-secrets-runner/src/: bindings.rs  env_provider.rs  error.rs  lib.rs  policy.rs  tenant.rs
crates/greentic-secrets-runner/tests/: denied.rs  env_ok.rs  global.rs  pack_validation.rs  provider_core_inmemory.rs  team.rs
crates/greentic-secrets-runner/tests/fixtures/minimal-secrets-pack/: pack.yaml  secret-requirements.json
crates/greentic-secrets-runner/tests/fixtures/minimal-secrets-pack/flows/: provider_read_secret.ygtc  provider_read_secret.ygtc.resolve.json
crates/greentic-secrets-runner/tests/fixtures/minimal-secrets-pack/schemas/secrets/fixture-minimal/: config.schema.json  secret.schema.json  state.schema.json
crates/greentic-secrets/src/: main.rs
crates/greentic-secrets/tests/: cli_smoke.rs  setup_cli.rs
crates/greentic-secrets/tests/fixtures/packs/fixture-provider/: pack.json  secret-requirements.json
crates/greentic-secrets/tests/fixtures/packs/fixture-provider/iac/tofu/: README.md
crates/greentic-secrets/tests/fixtures/packs/fixture-provider/schemas/: config.schema.json
crates/greentic-secrets/tests/fixtures/packs/fixture-provider/wasm/: setup_default__apply.wat  setup_default__requirements.wat
deploy/: Dockerfile.broker
docs/: SECRETS_SELF_DESCRIBE_AUDIT.md  api_key_refs.md  backends.md  embedded.md  events_messaging_secrets.md  pack-validation.md  (+8 more)
greentic-secrets/: Cargo.toml  README.md
greentic-secrets-api/: Cargo.toml  README.md
greentic-secrets-api/src/: lib.rs
greentic-secrets-broker/: Cargo.toml  README.md
greentic-secrets-broker/src/: auth.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  models.rs  nats.rs  path.rs  rotate.rs  state.rs  telemetry.rs  wit.rs
greentic-secrets-broker/tests/: broker_e2e.rs  cli.rs  http_auth.rs  rotation.rs  specs_cli.rs
greentic-secrets-broker/tests/support/: auth.rs
greentic-secrets-core/: Cargo.toml  README.md
greentic-secrets-core/examples/: embedded.rs  provider_secrets.rs  specs_cli.rs  wasm_host.rs
greentic-secrets-core/src/: api_keys.rs  backend.rs  backends.rs  broker.rs  embedded.rs  errors.rs  http.rs  imds.rs  key_provider.rs  lib.rs  policy.rs  probe.rs  provider.rs  provider_secrets.rs  resolver.rs  rt.rs  seed.rs  signing_keys.rs  spec_compat.rs  spec_registry.rs  spec_schema.rs  spec_validate.rs  types.rs  uri.rs
greentic-secrets-core/src/backend/: aws.rs  azure.rs  env.rs  file.rs  gcp.rs  k8s.rs
greentic-secrets-core/src/crypto/: dek_cache.rs  envelope.rs
greentic-secrets-core/tests/: api_keys.rs  cache.rs  env_backend.rs  file_backend.rs  invalidation.rs  json_helpers.rs  provider_secrets.rs  signing_keys.rs  spec_validate.rs  tenant_policy.rs
greentic-secrets-sdk/: Cargo.toml  README.md
greentic-secrets-sdk/src/: http_client.rs  lib.rs  nats_client.rs  wire.rs
greentic-secrets-spec/: Cargo.toml  README.md
greentic-secrets-spec/src/: backend.rs  capabilities.rs  error.rs  helpers.rs  key.rs  key_provider.rs  lib.rs  meta.rs  record.rs  requirements.rs  result_ext.rs  types.rs  uri.rs
greentic-secrets-support/: Cargo.toml  README.md
greentic-secrets-support/src/: constructors.rs  crypto.rs  key_provider.rs  keyutil.rs  lib.rs  result_ext.rs  serde_util.rs
greentic-secrets-wit/: Cargo.toml  README.md
greentic-secrets-wit/src/: lib.rs
greentic-secrets/src/: lib.rs
greentic-secrets/tests/: env_manager.rs
providers/azure-kv/: Cargo.toml
providers/azure-kv/src/: lib.rs
providers/dev/: Cargo.toml
providers/dev/src/: lib.rs
providers/greentic-aws-sm/: Cargo.toml  README.md
providers/greentic-aws-sm/src/: lib.rs
providers/greentic-aws-sm/tests/: conformance.rs
providers/greentic-azure-kv/: Cargo.toml  README.md
providers/greentic-azure-kv/src/: auth.rs  lib.rs
providers/greentic-azure-kv/tests/: conformance.rs
providers/greentic-dev/: Cargo.toml  README.md
providers/greentic-dev/src/: lib.rs
providers/greentic-dev/tests/: conformance.rs
providers/greentic-gcp-sm/: Cargo.toml  README.md
providers/greentic-gcp-sm/src/: lib.rs
providers/greentic-gcp-sm/tests/: conformance.rs
providers/greentic-k8s/: Cargo.toml  README.md
providers/greentic-k8s/src/: lib.rs
providers/greentic-k8s/tests/: conformance.rs
providers/greentic-vault-kv/: Cargo.toml  README.md
providers/greentic-vault-kv/src/: lib.rs  rt.rs
providers/greentic-vault-kv/tests/: conformance.rs
providers/k8s/: Cargo.toml
providers/k8s/src/: lib.rs
secrets-broker/: Cargo.toml
secrets-broker/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  models.rs  nats.rs  state.rs
secrets-broker/tests/: broker_e2e.rs  http_auth.rs  rotation.rs  specs_cli.rs
secrets-broker/tests/support/: auth.rs
secrets-core/: Cargo.toml
secrets-core/examples/: wasm_host.rs
secrets-core/src/: backend.rs  broker.rs  key_provider.rs  lib.rs  policy.rs  probe.rs  spec.rs  spec_registry.rs  types.rs  uri.rs
secrets-core/src/backend/: file.rs  k8s.rs
secrets-core/src/crypto/: envelope.rs  mod.rs
secrets-core/tests/: env_backend.rs  invalidation.rs  spec_registry.rs  spec_smoke.rs  uri_parse.rs
secrets-sdk/: Cargo.toml
secrets-sdk/src/: helpers.rs  lib.rs
(+262 files in other folders)
