[workspace]
members = [
    "greentic-secrets-api",
    "greentic-secrets-spec",
    "greentic-secrets-support",
    "greentic-secrets-core",
    "greentic-secrets-broker",
    "greentic-secrets-wit",
    "greentic-secrets-sdk",
    "greentic-secrets",
    "conformance",
    "providers/greentic-dev",
    "providers/greentic-aws-sm",
    "providers/greentic-gcp-sm",
    "providers/greentic-azure-kv",
    "providers/greentic-k8s",
    "providers/greentic-vault-kv",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.3"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0.4"
anyhow = "1.0.100"
thiserror = "2.0.17"

[patch.crates-io]
greentic-secrets-api = { path = "greentic-secrets-api" }
greentic-secrets-spec = { path = "greentic-secrets-spec" }
greentic-secrets-support = { path = "greentic-secrets-support" }
greentic-secrets-core = { path = "greentic-secrets-core" }
greentic-secrets-broker = { path = "greentic-secrets-broker" }
greentic-secrets-wit = { path = "greentic-secrets-wit" }
greentic-secrets-sdk = { path = "greentic-secrets-sdk" }
greentic-secrets = { path = "greentic-secrets" }
greentic-secrets-provider-dev = { path = "providers/greentic-dev" }
greentic-secrets-provider-aws-sm = { path = "providers/greentic-aws-sm" }
greentic-secrets-provider-gcp-sm = { path = "providers/greentic-gcp-sm" }
greentic-secrets-provider-azure-kv = { path = "providers/greentic-azure-kv" }
greentic-secrets-provider-k8s = { path = "providers/greentic-k8s" }
greentic-secrets-provider-vault-kv = { path = "providers/greentic-vault-kv" }
