[workspace]
members = [
    "greentic-secrets-api",
    "greentic-secrets-spec",
    "greentic-secrets-core",
    "greentic-secrets-broker",
    "greentic-secrets",
    "conformance",
    "crates/greentic-secrets-runner",
    "providers/greentic-dev",
    "providers/greentic-aws-sm",
    "providers/greentic-gcp-sm",
    "providers/greentic-azure-kv",
    "providers/greentic-k8s",
    "providers/greentic-vault-kv",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.7"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0.4"
anyhow = "1.0.100"
thiserror = "2.0.17"
greentic_secrets_api = { package = "greentic-secrets-api", version = "0.1.5", path = "greentic-secrets-api" }
greentic_secrets_spec = { package = "greentic-secrets-spec", version = "0.1.5", path = "greentic-secrets-spec" }
greentic_secrets_core = { package = "greentic-secrets-core", version = "0.1.5", path = "greentic-secrets-core" }
greentic_secrets_broker = { package = "greentic-secrets-broker", version = "0.1.5", path = "greentic-secrets-broker" }
greentic_secrets = { package = "greentic-secrets", version = "0.1.5", path = "greentic-secrets" }
greentic_secrets_provider_dev = { package = "greentic-secrets-provider-dev", version = "0.1.5", path = "providers/greentic-dev" }
greentic_secrets_provider_aws_sm = { package = "greentic-secrets-provider-aws-sm", version = "0.1.5", path = "providers/greentic-aws-sm" }
greentic_secrets_provider_gcp_sm = { package = "greentic-secrets-provider-gcp-sm", version = "0.1.5", path = "providers/greentic-gcp-sm" }
greentic_secrets_provider_azure_kv = { package = "greentic-secrets-provider-azure-kv", version = "0.1.5", path = "providers/greentic-azure-kv" }
greentic_secrets_provider_k8s = { package = "greentic-secrets-provider-k8s", version = "0.1.5", path = "providers/greentic-k8s" }
greentic_secrets_provider_vault_kv = { package = "greentic-secrets-provider-vault-kv", version = "0.1.5", path = "providers/greentic-vault-kv" }
secrets-core = { package = "greentic-secrets-core", version = "0.1.5", path = "greentic-secrets-core" }
secrets-provider-dev = { package = "greentic-secrets-provider-dev", version = "0.1.5", path = "providers/greentic-dev" }
secrets-provider-aws-sm = { package = "greentic-secrets-provider-aws-sm", version = "0.1.5", path = "providers/greentic-aws-sm" }
secrets-provider-gcp-sm = { package = "greentic-secrets-provider-gcp-sm", version = "0.1.5", path = "providers/greentic-gcp-sm" }
secrets-provider-azure-kv = { package = "greentic-secrets-provider-azure-kv", version = "0.1.5", path = "providers/greentic-azure-kv" }
secrets-provider-k8s = { package = "greentic-secrets-provider-k8s", version = "0.1.5", path = "providers/greentic-k8s" }
secrets-provider-vault-kv = { package = "greentic-secrets-provider-vault-kv", version = "0.1.5", path = "providers/greentic-vault-kv" }
greentic_secrets_provider_aws = { package = "greentic-secrets-provider-aws-sm", version = "0.1.5", path = "providers/greentic-aws-sm" }
greentic_secrets_provider_azure = { package = "greentic-secrets-provider-azure-kv", version = "0.1.5", path = "providers/greentic-azure-kv" }
greentic_secrets_provider_gcp = { package = "greentic-secrets-provider-gcp-sm", version = "0.1.5", path = "providers/greentic-gcp-sm" }
greentic_secrets_provider_vault = { package = "greentic-secrets-provider-vault-kv", version = "0.1.5", path = "providers/greentic-vault-kv" }
greentic_secrets_provider_dev_env = { package = "greentic-secrets-provider-dev", version = "0.1.5", path = "providers/greentic-dev" }
