[package]
name = "greentic-secrets-conformance"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
greentic_secrets_spec = { workspace = true }
greentic_secrets_provider_dev = { workspace = true, optional = true }

[features]
default = []
provider-dev = ["greentic_secrets_provider_dev"]
