[package]
name = "greentic-secrets-conformance"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
greentic_secrets_spec = { workspace = true }
greentic_secrets_provider_dev = { workspace = true, optional = true }
greentic_secrets_provider_aws_sm = { workspace = true, optional = true }
greentic_secrets_provider_azure_kv = { workspace = true, optional = true }
greentic_secrets_provider_gcp_sm = { workspace = true, optional = true }
greentic_secrets_provider_k8s = { workspace = true, optional = true }
greentic_secrets_provider_vault_kv = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
greentic-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
azure_identity = { version = "0.21", optional = true }
azure_core = { version = "0.21", optional = true }
time = { version = "0.3", optional = true }

[features]
default = []
provider-dev = ["greentic_secrets_provider_dev"]
provider-aws = ["greentic_secrets_provider_aws_sm"]
provider-azure = ["greentic_secrets_provider_azure_kv", "azure_identity", "azure_core", "time"]
provider-gcp = ["greentic_secrets_provider_gcp_sm"]
provider-k8s = ["greentic_secrets_provider_k8s"]
provider-vault = ["greentic_secrets_provider_vault_kv"]
