[package]
name = "greentic-secrets-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "secrets_broker"

[dependencies]
anyhow = { workspace = true }
async-nats = "0.44.2"
axum = { version = "0.8.6", features = ["macros", "json"] }
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3"
hyper = { version = "1", features = ["full"] }
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["use_pem", "rust_crypto"] }
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["std"] }
ring = { version = "0.17.14", features = ["std"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
secrets-core = { package = "greentic-secrets-core", version = "=0.1.1", path = "../greentic-secrets-core" }
secrets-provider-dev = { package = "greentic-secrets-provider-dev", path = "../providers/greentic-dev" }
secrets-provider-aws-sm = { package = "greentic-secrets-provider-aws-sm", path = "../providers/greentic-aws-sm", optional = true }
secrets-provider-gcp-sm = { package = "greentic-secrets-provider-gcp-sm", path = "../providers/greentic-gcp-sm", optional = true }
secrets-provider-azure-kv = { package = "greentic-secrets-provider-azure-kv", path = "../providers/greentic-azure-kv", optional = true }
secrets-provider-k8s = { package = "greentic-secrets-provider-k8s", path = "../providers/greentic-k8s", optional = true }
secrets-provider-vault-kv = { package = "greentic-secrets-provider-vault-kv", path = "../providers/greentic-vault-kv", optional = true }
secrets-wit = { package = "greentic-secrets-wit", path = "../greentic-secrets-wit" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ring = "0.17"
tempfile = "3"
serial_test = "3.2.0"
assert_cmd = "2.0"

[features]
default = []
aws-sm = ["secrets-provider-aws-sm"]
gcp-sm = ["secrets-provider-gcp-sm"]
azure-kv = ["secrets-provider-azure-kv"]
k8s = ["secrets-provider-k8s"]
vault-kv = ["secrets-provider-vault-kv"]
