[package]
name = "greentic-secrets-broker"
version.workspace = true
edition = "2021"
license = "MIT"
description = "HTTP and NATS broker exposing Greentic secrets to applications."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-broker"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]
publish = false

[lib]
name = "secrets_broker"

[dependencies]
anyhow = { workspace = true }
async-nats = "0.44.2"
axum = { version = "0.8.6", features = ["macros", "json"] }
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3"
hyper = { version = "1", features = ["full"] }
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["use_pem", "rust_crypto"] }
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["std"] }
ring = { version = "0.17.14", features = ["std"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
secrets-core = { workspace = true }
secrets-provider-dev = { workspace = true }
secrets-provider-aws-sm = { workspace = true, optional = true }
secrets-provider-gcp-sm = { workspace = true, optional = true }
secrets-provider-azure-kv = { workspace = true, optional = true }
secrets-provider-k8s = { workspace = true, optional = true }
secrets-provider-vault-kv = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ring = "0.17"
tempfile = "3"
serial_test = "3.2.0"
assert_cmd = "2.0"

[features]
default = []
aws-sm = ["secrets-provider-aws-sm"]
gcp-sm = ["secrets-provider-gcp-sm"]
azure-kv = ["secrets-provider-azure-kv"]
k8s = ["secrets-provider-k8s"]
vault-kv = ["secrets-provider-vault-kv"]
