[package]
name = "greentic-secrets-core"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Core runtime and backend orchestration for Greentic secrets."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-core"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["use_spec", "crypto-ring"]
use_spec = []
crypto-ring = ["dep:ring"]
crypto-none = []
env = []
file = []
k8s = []
aws = ["imds"]
gcp = []
azure = []
imds = ["dep:reqwest"]
nats = ["dep:async-nats", "dep:futures", "tokio"]
schema = ["schemars", "greentic_secrets_spec/schema"]

xchacha = ["chacha20poly1305"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
base64 = "0.22.1"
hkdf = "0.12"
sha2 = "0.10"
rand = { version = "0.9.2", features = ["std"] }
lru = "0.16.2"
tokio = { workspace = true, optional = true }
async-nats = { version = "0.44.2", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"], optional = true }
tracing = { workspace = true }
greentic_secrets_api = { workspace = true }
greentic_secrets_spec = { workspace = true }
ring = { version = "0.17", optional = true }

[dependencies.chacha20poly1305]
version = "0.10"
optional = true
default-features = false
features = ["std"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tempfile = "3"
anyhow = "1"
once_cell = "1"
wit-bindgen = "0.46.0"

[lib]
name = "secrets_core"
crate-type = ["rlib"]
