[package]
name = "greentic-secrets-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "secrets_sdk"

[dependencies]
anyhow = { workspace = true }
async-nats = "0.44.2"
base64 = "0.22.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.17"
tokio = { workspace = true }
tracing = { workspace = true }
secrets-core = { package = "greentic-secrets-core", version = "=0.1.1", path = "../greentic-secrets-core" }
uuid = { version = "1", features = ["v4"] }

[[example]]
name = "put_get_json"
path = "../examples/put_get_json.rs"

[[example]]
name = "rotate_category"
path = "../examples/rotate_category.rs"
