[package]
name = "greentic-secrets-sdk"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Async Rust SDK for interacting with the Greentic secrets broker."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-sdk"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "multi-tenant"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]
publish = false

[lib]
name = "secrets_sdk"

[dependencies]
anyhow = { workspace = true }
async-nats = "0.44.2"
base64 = "0.22.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.17"
tokio = { workspace = true }
tracing = { workspace = true }
secrets-core = { package = "greentic-secrets-core", version = "0.1.2", path = "../greentic-secrets-core" }
uuid = { version = "1", features = ["v4"] }

[[example]]
name = "put_get_json"
path = "../examples/put_get_json.rs"

[[example]]
name = "rotate_category"
path = "../examples/rotate_category.rs"
