[package]
name = "greentic-secrets-support"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Helper utilities for Greentic secrets providers (constructors, crypto envelope, URI helpers)."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-support"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["serde", "crypto-ring"]
serde = ["dep:serde"]
crypto-ring = ["dep:ring"]
crypto-none = []

[dependencies]
greentic-secrets-spec = { path = "../greentic-secrets-spec", version = "=0.1.3" }
async-trait = "0.1"
time = "0.3"
serde = { version = "1", features = ["derive"], optional = true }
ring = { version = "0.17", optional = true }
base64 = "0.22"
