[package]
name = "greentic-secrets"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Umbrella crate re-exporting Greentic secrets spec, support helpers, core runtime, and optional providers."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "multi-tenant"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["core", "spec", "support"]
core = ["dep:greentic_secrets_core"]
spec = ["dep:greentic_secrets_spec"]
support = ["dep:greentic_secrets_support"]
providers-aws = ["dep:greentic_secrets_provider_aws_sm"]
providers-azure = ["dep:greentic_secrets_provider_azure_kv"]
providers-gcp = ["dep:greentic_secrets_provider_gcp_sm"]
providers-k8s = ["dep:greentic_secrets_provider_k8s"]
providers-vault = ["dep:greentic_secrets_provider_vault_kv"]
providers-dev = ["dep:greentic_secrets_provider_dev"]

[dependencies]
greentic_secrets_spec = { package = "greentic-secrets-spec", path = "../greentic-secrets-spec", version = "0.1.2", optional = true }
greentic_secrets_core = { package = "greentic-secrets-core", path = "../greentic-secrets-core", version = "0.1.2", optional = true }
greentic_secrets_support = { package = "greentic-secrets-support", path = "../greentic-secrets-support", version = "0.1.2", optional = true }
greentic_secrets_provider_aws_sm = { package = "greentic-secrets-provider-aws-sm", path = "../providers/greentic-aws-sm", version = "0.1.2", optional = true }
greentic_secrets_provider_azure_kv = { package = "greentic-secrets-provider-azure-kv", path = "../providers/greentic-azure-kv", version = "0.1.2", optional = true }
greentic_secrets_provider_gcp_sm = { package = "greentic-secrets-provider-gcp-sm", path = "../providers/greentic-gcp-sm", version = "0.1.2", optional = true }
greentic_secrets_provider_k8s = { package = "greentic-secrets-provider-k8s", path = "../providers/greentic-k8s", version = "0.1.2", optional = true }
greentic_secrets_provider_vault_kv = { package = "greentic-secrets-provider-vault-kv", path = "../providers/greentic-vault-kv", version = "0.1.2", optional = true }
greentic_secrets_provider_dev = { package = "greentic-secrets-provider-dev", path = "../providers/greentic-dev", version = "0.1.2", optional = true }
